--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^16.13.1",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
-    "webpack": "^5.0.0-beta.16"
+    "webpack": "^5.0.0-beta.16",
+    "webpack-nano": "^1.0.0"
   }
 }
